--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2002-04-23  Didier Verna  <didier@lrde.epita.fr>
 
-	* fixme.dtx (): fix bug in index handling reported by Knut Lickert
+	* fixme.dtx: fix bug in index handling reported by Knut Lickert
 	<knut@lickert.net>: index entries were unconditionally built.
+	Use \nobreakspace instead of the tilda character. This avoids
+	conflicts with Babel in Spanish environments.
 
 2002-04-03  Didier Verna  <didier@lrde.epita.fr>
 
