--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-24  Didier Verna  <didier@lrde.epita.fr>
+
+	* Version 2.1 released.
+
 2002-04-23  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.dtx: fix bug in index handling reported by Knut Lickert
