Committed PRCS version branch-2-2.1
Support for Danish

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-21  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: support for Danish by Kim Rud Bille
+	<krbi01@control.auc.dk>
+
 2002-04-24  Didier Verna  <didier@lrde.epita.fr>
 
 	* Version 2.1 released.
