Committed PRCS version branch-2-2.2
New option (no)silent

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-03  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: new option "(no)silent".
+
 2002-05-21  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.dtx: support for Danish by Kim Rud Bille
