--- a/README
+++ b/README
@@ -21,6 +21,7 @@ version 1999/06/01 or later.
 FiXme consists of the following files:
 
 - README (this file)
+- NEWS
 - fixme.ins
 - fixme.dtx
 - fixme.el
@@ -36,53 +37,6 @@ summarize them in a list. When you switch from draft to final mode, any
 remaining fixme note will be logged, but removed from the document's body.
 Additionally, critical notes will abort compilation with an informative
 message. FiXme also comes with support for AUC-TeX.
-
-
-* Changes
-=========
-
-** Version 2.2
---------------
-*** Support for Danish
-thanks to Kim Rud Bille <krbi01@control.auc.dk>
-
-** Version 2.1
---------------
-*** Use \nobreakspace instead of the tilda character.
-This avoids conflicts with Babel and Spanish environments.
-*** Fix bug in index handling
-reported by Knut Lickert <knut@lickert.net>: index entries were
-unconditionally built.
-
-** Version 2.0
---------------
-*** New feature: note levels
-*** New feature: note counters, FiXme usage summary
-*** Suggestions from Kasper B. Graversen <kbg@dkik.dk>
-*** Support for Spanish
-thanks to Augustín Martín <agusmb@netscape.net>
-
-** Version 1.5
---------------
-*** New layout option: `inline'
-puts notes directly in the text.
-
-** Version 1.4
---------------
-*** Support for the koma-script classes
-*** Fix bug in \listoffixmes
-reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
-the command didn't work when called before the first fixme note
-
-** Version 1.3
---------------
-*** Support for Italian
-thanks to Riccardo Murri <murri@phc.unipi.it>
-
-** Version 1.2
---------------
-*** Support for German
-thanks to Harald Harders <h.harders@tu-bs.de>
 
 
 * Installation
