Committed PRCS version branch-2-2.3
Update NEWS file.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.57 Wed, 03 Jul 2002 16:20:30 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.58 Wed, 03 Jul 2002 16:31:16 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -287,8 +287,8 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v2.2] Support for Danish thanks to Kim Rud Bille
-% |<krbi01@control.auc.dk>|
+% \item[v2.2] New option \texttt{silent} to suppress notes logging\\
+% Support for Danish thanks to Kim Rud Bille |<krbi01@control.auc.dk>|
 % \item[v2.1] Use |\nobreakspace| instead of the tilda character. This avoids
 % conflicts with Babel in Spanish environments.\\
 % Fix bug reported by Knut Lickert |<knut@lickert.net>|: index
