--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,21 @@
 			     WHAT'S NEW IN FIXME
 
 
+
+*** Copyright (C) 1998-2002 Didier Verna
+
+FiXme may be distributed and/or modified under the
+conditions of the LaTeX Project Public License, either version 1.1
+of this license or (at your option) any later version.
+The latest version of this license is in
+http://www.latex-project.org/lppl.txt
+and version 1.1 or later is part of all distributions of LaTeX
+version 1999/06/01 or later.
+
+FiXme consists of the files listed in the file `README'.
+
+
+
 * Version 2.2
 * ===========
 ** New option "silent" to suppress notes logging.
