Committed PRCS version branch-2-3.1
Update Agustin Martin's email address.

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,7 +30,7 @@
 2002-03-26  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.dtx: support for Spanish by Augustin Martin
-	<agusmb@netscape.net>
+	<agusmba@terra.es>
 
 2002-02-19  Didier Verna  <didier@lrde.epita.fr>
 
