--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2002 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.58 Wed, 03 Jul 2002 16:31:16 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.59 Tue, 19 Oct 2004 09:49:21 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -62,11 +62,11 @@
 %%   Right brace   \}     Tilde         \~}
 %
 % ^^A $Format: "% \\newcommand\\version{v$Version$}"$
-% \newcommand\version{v2.2}
+% \newcommand\version{v2.3}
 % ^^A $Format: "% \\newcommand\\releasedate{$ReleaseDate$}"$
-% \newcommand\releasedate{2002/07/03}
+% \newcommand\releasedate{2004/10/19}
 % ^^A $Format: "% \\newcommand\\packagecopyright{$LaTeXCopyright$}"$
-% \newcommand\packagecopyright{Copyright \copyright{} 1998--2002 Didier Verna}
+% \newcommand\packagecopyright{Copyright \copyright{} 1998--2004 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
 % \newcommand\auctex{AUC-\TeX}
 % \MakeShortVerb{\|}
@@ -296,7 +296,7 @@
 % \item[v2.0] New feature: note levels\\
 % New feature: \fixme{} note counters and usage summary\\
 % Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|\\
-% Support for Spanish thanks to Agust\'in Mart\'in |<agusmb@netscape.net>|
+% Support for Spanish thanks to Agust\'in Mart\'in |<agusmba@terra.es>|
 % \item[v1.5] New appearance option: \texttt{inline}.
 % \item[v1.4] Support for the koma-script classes\\
 % Fix bug reported by Ulf Jaenicke-Roessler
@@ -316,7 +316,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$ReleaseDate$ v$Version$"$
-\ProvidesPackage{fixme}[2002/07/03 v2.2
+\ProvidesPackage{fixme}[2004/10/19 v2.3
                         Insert fixme notes in your documents]
 
 \newcommand*\fixmelogo{\textsf{FiXme}}
