--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,3 @@
-                                                               -*- outline -*-
 
 
 			     WHAT'S NEW IN FIXME
@@ -6,6 +5,8 @@
 
 
 *** Copyright (C) 1998-2002 Didier Verna
+
+This file is part of FiXme.
 
 FiXme may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either version 1.1
@@ -39,7 +40,7 @@ unconditionally built.
 ** New feature: note counters, FiXme usage summary
 ** Suggestions from Kasper B. Graversen <kbg@dkik.dk>
 ** Support for Spanish
-thanks to Augustín Martín <agusmb@netscape.net>
+thanks to Augustín Martín <agusmba@terra.es>
 
 * Version 1.5
 * ===========
@@ -62,3 +63,9 @@ thanks to Riccardo Murri <murri@phc.unipi.it>
 * ===========
 ** Support for German
 thanks to Harald Harders <h.harders@tu-bs.de>
+
+
+
+Local Variables:
+mode: outline
+End:
