--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@
 
 
 
-*** Copyright (C) 1998-2002 Didier Verna
+*** Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna
 
 This file is part of FiXme.
 
@@ -20,14 +20,20 @@ FiXme consists of the files listed in the file `README'.
 
 
 
+* Version 2.3
+=============
+** Fix bug in marginal notes
+reported by Akim Demaille: they could mess up the document's layout by
+flushing it right.
+
 * Version 2.2
-* ===========
+=============
 ** New option "silent" to suppress notes logging.
 ** Support for Danish
 thanks to Kim Rud Bille <krbi01@control.auc.dk>
 
 * Version 2.1
-* ===========
+=============
 ** Use \nobreakspace instead of the tilda character.
 This avoids conflicts with Babel and Spanish environments.
 ** Fix bug in index handling
@@ -35,7 +41,7 @@ reported by Knut Lickert <knut@lickert.net>: index entries were
 unconditionally built.
 
 * Version 2.0
-* ===========
+=============
 ** New feature: note levels
 ** New feature: note counters, FiXme usage summary
 ** Suggestions from Kasper B. Graversen <kbg@dkik.dk>
@@ -43,24 +49,24 @@ unconditionally built.
 thanks to Augustín Martín <agusmba@terra.es>
 
 * Version 1.5
-* ===========
+=============
 ** New layout option: `inline'
 puts notes directly in the text.
 
 * Version 1.4
-* ===========
+=============
 ** Support for the koma-script classes
 ** Fix bug in \listoffixmes
 reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
 the command didn't work when called before the first fixme note
 
 * Version 1.3
-* ===========
+=============
 ** Support for Italian
 thanks to Riccardo Murri <murri@phc.unipi.it>
 
 * Version 1.2
-* ===========
+=============
 ** Support for German
 thanks to Harald Harders <h.harders@tu-bs.de>
 
