--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 		  a LaTeX2e package for putting fixme notes
 			     in draft documents
 
-                    Copyright (C) 1998-2002 Didier Verna
+	Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna
 
 
 * Copyright
@@ -56,7 +56,7 @@ a suitable AUC-TeX style directory.
 --
 Didier Verna, didier@lrde.epita.fr, http://www.lrde.epita.fr/~didier
 
-EPITA / LRDE, 14-16 rue Voltaire   Tel.+33 (1) 53 14 59 47
+EPITA / LRDE, 14-16 rue Voltaire   Tel.+33 (1) 44 08 01 85
 94276 Le Kremlin-Bicêtre, France   Fax.+33 (1) 53 14 59 22   didier@xemacs.org
 
 
