--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.62 Tue, 19 Oct 2004 17:22:50 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.63 Mon, 25 Oct 2004 11:45:47 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -797,7 +797,7 @@
         Valid options are `inline', `margin', `footnote' and `index'.%
         \MessageBreak
         Type X to quit, fix your document, and rerun LaTeX.}%
-    \else%
+      \else%
       \csname fixme@\fixme@option true\endcsname%
     \fi}%
   \@@fixme{#1}{#3}%
@@ -812,6 +812,35 @@
   {\@fixme{fatal}}{\@@fixme{fatal}}}
 
 %    \end{macrocode}
+%
+% \subsection{\fixme{} environments}
+%    \begin{macrocode}
+\newcommand\FXEnvBegin{\begin{quotation}}
+\newcommand\FXEnvEnd{\end{quotation}}
+
+\newenvironment{anfxnote}[1][]{%
+  \edef\fixme@args{inline\iffixme@index,index\fi}
+  \FXEnvBegin
+  \fxnote[\fixme@args]{#1}}{%
+  \FXEnvEnd}
+\newenvironment{anfxwarning}[1][]{%
+  \edef\fixme@args{inline\iffixme@index,index\fi}
+  \FXEnvBegin
+  \fxwarning[\fixme@args]{#1}}{%
+  \FXEnvEnd}
+\newenvironment{anfxerror}[1][]{%
+  \edef\fixme@args{inline\iffixme@index,index\fi}
+  \FXEnvBegin
+  \fxerror[\fixme@args]{#1}}{%
+  \FXEnvEnd}
+\newenvironment{afixme}[1][]{%
+  \edef\fixme@args{inline\iffixme@index,index\fi}
+  \FXEnvBegin
+  \fixme[\fixme@args]{#1}}{%
+  \FXEnvEnd}
+
+%    \end{macrocode}
+%
 % \subsection{Language processing}
 % Options that control which language is selected:
 %    \begin{macrocode}
