Committed PRCS version branch-3-0.2
Updated the el file, fixed a typo in the doc.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,12 +4,12 @@
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.64 Mon, 25 Oct 2004 16:47:04 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.65 Wed, 22 Dec 2004 14:46:11 +0100 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
 % Created:       Thu Dec 10 16:04:01 1998
-% Last Revision: Tue Oct 19 11:07:44 2004
+% Last Revision: Wed Dec 22 14:44:26 2004
 %
 % This file is part of FiXme.
 %
@@ -201,7 +201,7 @@
 % |\fixme[inline]{blah}|.\par
 % Finally, note that \fixme{} environments behave in a special way: they are
 % always typeset \texttt{inline}, regardless of your layout settings (they
-% respect you whish for an index though).\par
+% respect your whish for an index though).\par
 %
 % \subsection{Controlling the notes logging}
 % \DescribeEnv{silent}
